--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 Resources/ECHE313[[:space:]]Textbook.pdf filter=lfs diff=lfs merge=lfs -text
+Assessments/ECHE313[[:space:]]Exam[[:space:]]Materials.pdf filter=lfs diff=lfs merge=lfs -text
