--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 Resources/ECHE313[[:space:]]Textbook.pdf filter=lfs diff=lfs merge=lfs -text
 Assessments/ECHE313/Midterm[[:space:]]1/[[:space:]]Exam[[:space:]]1[[:space:]]Materials.pdf filter=lfs diff=lfs merge=lfs -text
+Homework/Homework[[:space:]]9/ECHE313[[:space:]]4.20.25.pdf filter=lfs diff=lfs merge=lfs -text
