--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@ Assessments/ECHE313/Midterm[[:space:]]1/[[:space:]]Exam[[:space:]]1[[:space:]]Ma
 Homework/Homework[[:space:]]9/ECHE313[[:space:]]4.20.25.pdf filter=lfs diff=lfs merge=lfs -text
 Assessments/Final/ECHE313[[:space:]]Final[[:space:]]Notes filter=lfs diff=lfs merge=lfs -text
 Assessments/Final/ECHE313[[:space:]]Final[[:space:]]Notes.pdf filter=lfs diff=lfs merge=lfs -text
+Assessments/Final/ECHE313[[:space:]]Final[[:space:]]Exam[[:space:]]Materials.pdf filter=lfs diff=lfs merge=lfs -text
